--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,9 +15,11 @@ pycparser==2.21
 PyJWT==2.7.0
 python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 social-auth-app-django==5.2.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+uritemplate==4.1.1
 urllib3==2.0.2
