--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+beautifulsoup4==4.12.2
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -12,6 +13,7 @@ djangorestframework-simplejwt==5.2.2
 djoser==2.2.0
 gunicorn==20.1.0
 idna==3.4
+lxml==4.9.2
 oauthlib==3.2.2
 psycopg2-binary==2.9.6
 pycparser==2.21
@@ -23,6 +25,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 social-auth-app-django==5.2.0
 social-auth-core==4.4.2
+soupsieve==2.4.1
 sqlparse==0.4.4
 typing_extensions==4.6.3
 uritemplate==4.1.1
