--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ cryptography==41.0.1
 defusedxml==0.7.1
 dj-database-url==2.0.0
 Django==4.2.1
+django-cors-headers==4.1.0
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
